--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -22,8 +22,22 @@ body {
   border-bottom: 1px solid #ccc;
 }
 
+div.row.header .main-logo {
+  background: url(images/main-logo.png) left center no-repeat;
+  width: 120px;
+  height: 130px;
+}
+
+div.row.header .main-title {
+  margin-left: 10px;
+}
+
+div.row.header .main-title h2 {
+  margin: 34px 0 5px 0;
+}
+
 div.row.header, div.twelve.columns.header {
-  height: 110px;
+  height: 130px;
 }
 
 div.header div.menu {
@@ -249,19 +263,18 @@ div.column-title, div.row-title {
   padding: 9px 10px;
   margin: 0px;
   color: #efeff2;
-  filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=snowfa,EndColorStr=#FFDCDCdc);
-  background-image: -moz-linear-gradient(top,#568994 0,#366984 100%);
-  background-image: -ms-linear-gradient(top,#568994 0,#366984 100%);
-  background-image: -o-linear-gradient(top,#568994 0,#366984 100%);
-  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#568994),color-stop(100%,#366984));
-  background-image: -webkit-linear-gradient(top,#568994 0,#366984 100%);
-  background-image: linear-gradient(to bottom,#568994 0,#366984 100%);
 }
 
 div.column-title {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   border-radius: 3px;
+  background: #396;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #396), color-stop(100%, #31654B));
+  background: -webkit-linear-gradient(#396, #31654B);
+  background: -moz-linear-gradient(#396, #31654B);
+  background: -o-linear-gradient(#396, #31654B);
+  background: linear-gradient(#396, #31654B);
   -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.18);
   -ms-box-shadow: 0 2px 4px rgba(0,0,0,0.18);
   -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.18);
@@ -276,6 +289,13 @@ div.row-title {
   -ms-box-shadow: inset 0 2px 4px rgba(0,0,0,0.18);
   -webkit-box-shadow: inset 0 2px 4px rgba(0,0,0,0.18);
   box-shadow: inset 0 2px 4px rgba(0,0,0,0.18);
+  filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=snowfa,EndColorStr=#FFDCDCdc);
+  background: -moz-linear-gradient(top,#353a45 0,#27272f 100%);
+  background: -ms-linear-gradient(top,#353a45 0,#27272f 100%);
+  background: -o-linear-gradient(top,#353a45 0,#27272f 100%);
+  background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#353a45),color-stop(100%,#27272f));
+  background: -webkit-linear-gradient(top,#353a45 0,#27272f 100%);
+  background: linear-gradient(to bottom,#353a45 0,#27272f 100%);
 }
 
 div.column-title h4 {
@@ -380,12 +400,12 @@ div.column.centered.load-more {
   border-bottom: 1px solid #4a4a4c;
   background-color: #E0E0E0;
   filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=snowfa,EndColorStr=#FFDCDCdc);
-  background-image: -moz-linear-gradient(top,#747476 0,#58585a 100%);
-  background-image: -ms-linear-gradient(top,#747476 0,#58585a 100%);
-  background-image: -o-linear-gradient(top,#747476 0,#58585a 100%);
-  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#747476),color-stop(100%,#58585a));
-  background-image: -webkit-linear-gradient(top,#747476 0,#58585a 100%);
-  background-image: linear-gradient(to bottom,#747476 0,#58585a 100%);
+  background-image: -moz-linear-gradient(top,#646466 0,#4a4a4c 100%);
+  background-image: -ms-linear-gradient(top,#646466 0,#4a4a4c 100%);
+  background-image: -o-linear-gradient(top,#646466 0,#4a4a4c 100%);
+  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#646466),color-stop(100%,#4a4a4c));
+  background-image: -webkit-linear-gradient(top,#646466 0,#4a4a4c 100%);
+  background-image: linear-gradient(to bottom,#646466 0,#4a4a4c 100%);
   -moz-border-radius-bottomright: 3px;
   -webkit-border-bottom-right-radius: 3px;
   -o-border-bottom-right-radius: 3px;
@@ -411,7 +431,7 @@ div.column.centered.load-more {
 .video div.under h3, .video div.under h4, .video div.under h5 {
   padding: 0px;
   margin: 0px;
-  text-shadow: #222 0 1px;
+  text-shadow: #111 0 1px;
 }
 
 /* Print styles.  Inlined to avoid required HTTP connection: www.phpied.com/delay-loading-your-print-css/ Credit to Paul Irish and HTML5 Boilerplate (html5boilerplate.com)
