--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -16,6 +16,10 @@ body {
   -webkit-font-smoothing: antialiased; 
 }
 
+input:focus { 
+    outline: none; 
+}
+
 /* Upper Container ---------------------- */
 
 #upper-container {
@@ -33,6 +37,10 @@ body {
   -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.22);
   box-shadow: 0 2px 5px rgba(0,0,0,0.22);
   background: rgba(248,248,248,0.96);
+}
+
+div.row.header, div.twelve.columns.header {
+  height: 130px;
 }
 
 div.row.header .main-logo {
@@ -53,11 +61,35 @@ div.row.header .main-title p {
   line-height: 16px;
 }
 
-div.row.header, div.twelve.columns.header {
-  height: 130px;
+div.row.header div.search {
+  position: relative;
+  top: 50%;
+  margin-top: -16px;
 }
 
-div.header div.menu {
+div.row.header div.search input#search-box {
+  width: 100%;
+  border: 1px solid #cfcfcf;
+  padding: 5px;
+  background: none;
+  font-size: 16px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  color: rgba(0,0,0,0.3);
+}
+
+div.row.header div.search input#search-box:hover {
+  border: 1px solid #bbb;
+  color: rgba(0,0,0,0.5);
+}
+
+div.row.header div.search input#search-box:focus {
+  border: 1px solid #bbb;
+  color: #333;
+}
+
+div.row.header div.menu {
   position: absolute;
   top: 50%;
   right: 0;
@@ -70,6 +102,36 @@ div.header div.menu {
   margin-left: 24px;
   font-size: 18px;
   color: #333;
+}
+
+.header-menu-item.user {
+  padding: 6px 30px 6px 9px;
+  position: relative;
+  top: -7px;
+  margin-left: 18px;
+  border: 1px solid #ccc;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -moz-box-shadow: inset 0 0 1px white;
+  -ms-box-shadow: inset 0 0 1px white;
+  -webkit-box-shadow: inset 0 0 1px white;
+  box-shadow: inset 0 0 1px white;
+  background: url(images/user-down.png) right center no-repeat;
+}
+
+.header-menu-item.user:hover {
+  -moz-box-shadow:  0 1px 3px rgba(0,0,0,0.13);
+  -ms-box-shadow:  0 1px 3px  rgba(0,0,0,0.13);
+  -webkit-box-shadow:  0 1px 3px  rgba(0,0,0,0.13);
+  box-shadow:  0 1px 3px  rgba(0,0,0,0.13);
+  color: #111;
+  background: url(images/user-down.png) right center no-repeat, -moz-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
+  background: url(images/user-down.png) right center no-repeat, -ms-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
+  background: url(images/user-down.png) right center no-repeat, -o-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
+  background: url(images/user-down.png) right center no-repeat, -webkit-gradient(linear,left top,left bottom,color-stop(0,#FAFAFA),color-stop(100%,gainsboro));
+  background: url(images/user-down.png) right center no-repeat, -webkit-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
+  background: url(images/user-down.png) right center no-repeat, linear-gradient(to bottom,#FAFAFA 0,gainsboro 100%);
 }
 
 /* Mid Container ---------------------- */
