--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -94,33 +94,17 @@ div.row.header div.menu {
 
 .header-menu-item {
   float: right;
-  margin-left: 24px;
+  margin-left: 16px;
   font-size: 18px;
   color: #333;
 }
 
-.header-menu-item.user {
-  padding: 6px 30px 6px 9px;
-  position: relative;
-  top: -7px;
-  margin-left: 18px;
-  border: 1px solid #ccc;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  -moz-box-shadow: inset 0 0 1px white;
-  -ms-box-shadow: inset 0 0 1px white;
-  -webkit-box-shadow: inset 0 0 1px white;
-  box-shadow: inset 0 0 1px white;
+.header-menu-item.header-button.user {
+  padding-right: 30px;
   background: url(images/user-down.png) right center no-repeat;
 }
 
-.header-menu-item.user:hover {
-  -moz-box-shadow:  0 1px 3px rgba(0,0,0,0.13);
-  -ms-box-shadow:  0 1px 3px  rgba(0,0,0,0.13);
-  -webkit-box-shadow:  0 1px 3px  rgba(0,0,0,0.13);
-  box-shadow:  0 1px 3px  rgba(0,0,0,0.13);
-  color: #111;
+.header-menu-item.header-button.user:hover {
   background: url(images/user-down.png) right center no-repeat, -moz-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
   background: url(images/user-down.png) right center no-repeat, -ms-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
   background: url(images/user-down.png) right center no-repeat, -o-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
@@ -455,6 +439,38 @@ abbr { text-transform: none; }
 
 .button.small {
   padding: 4px 8px;
+}
+
+
+  /* Header Buttons */
+
+.header-menu-item.header-button {
+  padding: 6px 8px 6px 8px;
+  position: relative;
+  top: -7px;
+  margin-left: 14px;
+  border: 1px solid #ccc;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -moz-box-shadow: inset 0 0 1px white;
+  -ms-box-shadow: inset 0 0 1px white;
+  -webkit-box-shadow: inset 0 0 1px white;
+  box-shadow: inset 0 0 1px white;
+}
+
+.header-menu-item.header-button:hover {
+  -moz-box-shadow:  0 1px 3px rgba(0,0,0,0.13);
+  -ms-box-shadow:  0 1px 3px  rgba(0,0,0,0.13);
+  -webkit-box-shadow:  0 1px 3px  rgba(0,0,0,0.13);
+  box-shadow:  0 1px 3px  rgba(0,0,0,0.13);
+  color: #111;
+  background: -moz-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
+  background: -ms-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
+  background: -o-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
+  background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#FAFAFA),color-stop(100%,gainsboro));
+  background: -webkit-linear-gradient(top,#FAFAFA 0,gainsboro 100%);
+  background: linear-gradient(to bottom,#FAFAFA 0,gainsboro 100%);
 }
 
 /* Inputs -------------------- */
