--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -597,18 +597,18 @@ div.column.centered.load-more {
   overflow: auto;
   position: relative;
   color: #fff;
-  border-top: 1px solid #a0a0a4;
-  border-left: 1px solid #777;
-  border-right: 1px solid #777;
-  border-bottom: 1px solid #4a4a4c;
+  border-top: 1px solid #909094;
+  border-left: 1px solid #444;
+  border-right: 1px solid #444;
+  border-bottom: 1px solid #222224;
   background-color: #E0E0E0;
   filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=snowfa,EndColorStr=#FFDCDCdc);
-  background-image: -moz-linear-gradient(top,#646466 0,#4a4a4c 100%);
-  background-image: -ms-linear-gradient(top,#646466 0,#4a4a4c 100%);
-  background-image: -o-linear-gradient(top,#646466 0,#4a4a4c 100%);
-  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#646466),color-stop(100%,#4a4a4c));
-  background-image: -webkit-linear-gradient(top,#646466 0,#4a4a4c 100%);
-  background-image: linear-gradient(to bottom,#646466 0,#4a4a4c 100%);
+  background-image: -moz-linear-gradient(top,#545456 0,#3a3a3c 100%);
+  background-image: -ms-linear-gradient(top,#545456 0,#3a3a3c 100%);
+  background-image: -o-linear-gradient(top,#545456 0,#3a3a3c 100%);
+  background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0,#545456),color-stop(100%,#3a3a3c));
+  background-image: -webkit-linear-gradient(top,#545456 0,#3a3a3c 100%);
+  background-image: linear-gradient(to bottom,#545456 0,#3a3a3c 100%);
   -moz-border-radius-bottomright: 3px;
   -webkit-border-bottom-right-radius: 3px;
   -o-border-bottom-right-radius: 3px;
@@ -626,7 +626,7 @@ div.column.centered.load-more {
 }
 
 .video.featured div.under {
-  border-bottom: 2px solid #4a4a4c;
+  border-bottom: 2px solid #222224;
 }
 
 
