--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -119,7 +119,7 @@ div.row.header div.menu {
   padding: 6px 4px;
 }
 
-.header-menu-item.header-button.language img {
+img {
   vertical-align: top;
 }
 
@@ -164,24 +164,25 @@ div.news ul li a {
 
   /* Featured Content below Video */
 
-div.featured-content, div.featured-filmmaker {
+div.featured-content {
   background: #fdfdfe;
-  padding: 12.5px;
-  height: 282px;
+  padding: 0;
+  height: 307px;
   border-bottom: 2px solid #aaa;
 }
 
-div.featured-content .featured-image, div.featured-filmmaker .featured-image {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  height: 100%;
-  width: 222px;
+div.featured-content .featured-image {
+  display: block;
+  float: left;
+  height: 305px;
+  width: auto;
   background: #111;
 }
 
 div.featured-content .featured-text {
-  margin-left: 232px;
+  width: 225px;
+  padding: 12.5px;
+  float: left;
   background: #fdfdfe;
 }
 
@@ -194,29 +195,17 @@ div.featured-content .featured-text ul li a {
   font-weight: bold;
 }
 
-/* Featured Content below Video */
-
-div.featured-filmmaker .featured-text {
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-  padding: 6px;
-  width: 100%;
-  background: #fdfdfe;
-  border-bottom: 2px solid #aaa;
-}
+/* Featured Filmmaker below Video */
 
 div.featured-filmmaker .featured-image {
   width: 100%;
+  height: auto;
 }
 
 div.featured-filmmaker .featured-text {
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
   padding: 6px;
-  width: 100%;
   background: #fdfdfe;
+  border-bottom: 2px solid #aaa;
 }
 
 div.featured-filmmaker .featured-text a {
@@ -388,7 +377,7 @@ div.separate {
 }
 
 div.separate-thick {
-  border-bottom: 5px solid #777;
+  border-bottom: 5px solid #555;
 }
 
 /* Row/Column Titles ----------------------- */
@@ -584,6 +573,12 @@ div.column.centered.load-more {
 
 .video div.viewport {
   max-width: 100%;
+  height: auto;
+  border-top: 2px solid #555;
+}
+
+.video div.viewport img {
+  width: 100%;
   height: auto;
 }
 
