--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -10,7 +10,7 @@ body {
   font-family: "Arimo", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 14px; 
   font-size: 1.4rem; 
-  line-height: 1; 
+  line-height: 1.30; 
   color: #222222; 
   position: relative; 
   -webkit-font-smoothing: antialiased; 
@@ -161,11 +161,16 @@ div.news ul li {
   padding: 14px;
 }
 
+div.news ul li a {
+  color: #333;
+}
+
 div.news ul li + li {
   border-top: 1px solid #ccc;
 }
 
-div.news ul li a {
+div.news ul li h5 {
+  margin: 0px;
   color: #222;
   font-weight: bold;
 }
@@ -219,12 +224,11 @@ div.featured-content .featured-text {
   background: #fdfdfe;
 }
 
-div.featured-content .featured-text ul {
-  list-style: none;
+div.featured-content .featured-text a {
+  color: #222;
 }
 
-div.featured-content .featured-text ul li a {
-  color: #222;
+div.featured-content .featured-text h5 {
   font-weight: bold;
 }
 
@@ -384,7 +388,7 @@ p a, p a:visited { line-height: inherit; }
 /* Base Type Styles Using Modular Scale ---------------------- */
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, p, blockquote, th, td { margin: 0; padding: 0; font-size: 14px; }
 
-p { font-size: 14px; line-height: 1.6; margin-bottom: 17px; }
+p { font-size: 14px; line-height: 1.4; margin-bottom: 17px; }
 p.lead { font-size: 17.5px; line-height: 1.6; margin-bottom: 17px; }
 p img.left, p img { margin: 17px; margin-left: 0; }
 p img.right { margin: 17px; margin-right: 0; }
@@ -397,8 +401,8 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small { font-size: 60%; col
 h1 { font-size: 48px; }
 h2 { font-size: 34px; }
 h3 { font-size: 24px; }
-h4 { font-size: 14px; }
-h5 { font-size: 14px; }
+h4 { font-size: 14px; line-height: 1.30; }
+h5 { font-size: 14px; line-height: 1.30; }
 h6 { font-size: 14px; font-weight: normal; }
 
 hr { border: solid #ddd; border-width: 1px 0 0; clear: both; margin: 22px 0 21px; height: 0; }
@@ -474,8 +478,8 @@ div.column-title h4, div.row-title h4 {
 
 div.column-title .column-title-icon {
   float: left;
-  width: 32px;
-  height: 32px;
+  width: 34px;
+  height: 34px;
   background: #f54422;
   background: -moz-linear-gradient(top,#099 0,#088 100%);
   background: -ms-linear-gradient(top,#099 0,#088 100%);
@@ -493,7 +497,7 @@ div.column-title .column-title-icon {
 
 
 /* Lists ---------------------- */
-ul, ol { font-size: 14px; line-height: 1.44; margin-bottom: 17px; list-style-position: inside; }
+ul, ol { font-size: 14px; line-height: inherit; margin-bottom: 17px; list-style-position: inside; }
 
 /* Blockquotes ---------------------- */
 blockquote, blockquote p { line-height: 1.5; color: #777; }
